# sentinel

./: .gitignore  CLAUDE.md  Cargo.toml  README.md
docs/: ai-token-savings-plan.md  windows-agent-setup.md
locales/: de.toml  en.toml  es.toml  ja.toml  zh.toml
src/: app.rs  constants.rs  main.rs  utils.rs
src/agent/: main.rs
src/ai/: client.rs  context.rs  conversation.rs  mod.rs
src/alerts/: detector.rs  mod.rs
src/config/: mod.rs
src/diagnostics/: mod.rs
src/metrics/: mod.rs
src/models/: alert.rs  mod.rs  process.rs  system.rs
src/monitor/: collector.rs  docker.rs  mod.rs
src/notifications/: mod.rs  telegram.rs
src/plugins/: mod.rs  registry.rs
src/plugins/market/: client.rs  mod.rs  models.rs  renderer.rs  state.rs
src/plugins/settings/: mod.rs  renderer.rs
src/plugins/windows/: mod.rs  models.rs  renderer.rs  state.rs
src/security/: collector.rs  mod.rs  state.rs
src/store/: mod.rs
src/thermal/: mod.rs  shutdown.rs
src/ui/: glyphs.rs  mod.rs  renderer.rs  state.rs  theme.rs  widgets.rs
src/ui/renderer/: ai_chat.rs  alerts.rs  dashboard.rs  header.rs  helpers.rs  mod.rs  overlays.rs  processes.rs  status_bar.rs  thermal.rs
